# VectorHoriVert_src2

./: Autotest.cpp  CMakeLists.txt  CStack.cpp  CStack.h  Node.cpp  Node.h  README.md  data.txt  datadat.txt  main.cpp  prosto.txt  prostotak.txt
